welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value bsmile
	if (aSmile && bsmile) 
                      ^monkeyTrouble:5: error: value ¶ is not a member of Boolean
	if (aSmile ¶ bSmile ) {
                   ^monkeyTrouble:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (aSmile ¶ bSmile ) {
        ^